syntax = "proto3";

package profile_menu;

message ProfileMenu {
  string id = 1;
  bool profileMenuStatus = 2;
  string menuId = 3;
  string profileId = 4;
}

// *********** DTO ***********
message Create {
  bool profileMenuStatus = 1;
  string menuId = 2;
  string profileId = 3;
}

message Update {
  string id = 1;
  bool profileMenuStatus = 2;
  string menuId = 3;
  string profileId = 4;
}

message Delete {
  string id = 1;
}

message Search {
  string id = 1;
  bool profileMenuStatus = 2;
  string menuId = 3;
  string profileId = 4;
}

// *********** One ***********
message One {
  ProfileMenu data = 1;
}

// *********** Many ***********
message Many {
  repeated ProfileMenu data = 1;
}

service ProfileMenuService {
  rpc CreateOne (Create) returns (One) {}
  rpc UpdateOne (Update) returns (One) {}
  rpc DeleteOne (Delete) returns (One) {}
  rpc SearchOne (Search) returns (One) {}
  rpc SearchMany (Many) returns (Many) {}
}