// Original file: src/protos/6/profile-menu.proto


export interface ProfileMenu {
  'id'?: (string);
  'profileMenuStatus'?: (boolean);
  'menuId'?: (string);
  'profileId'?: (string);
}

export interface ProfileMenu__Output {
  'id': (string);
  'profileMenuStatus': (boolean);
  'menuId': (string);
  'profileId': (string);
}
