// Original file: src/protos/6/profile-menu.proto


export interface Update {
  'id'?: (string);
  'profileMenuStatus'?: (boolean);
  'menuId'?: (string);
  'profileId'?: (string);
}

export interface Update__Output {
  'id': (string);
  'profileMenuStatus': (boolean);
  'menuId': (string);
  'profileId': (string);
}
